<?xml version="1.0" encoding="UTF-8" ?>
<Module>
<ModulePrefs title="-" />
<Content type="html"><![CDATA[

<!DOCTYPE html>
<html lang="en-us">
<head>
<meta charset="utf-8"/>
<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/z799gs/550o8@main/style.css"/>

<style>
    canvas:focus { outline: none; }
    html, body {
        padding: 0; margin: 0; overflow: hidden;
        width: 100%; height: 100%;
        background-color: #000;
    }

    #unity-container { 
        width: 100%; height: 100%; 
        position: absolute; top: 0; left: 0; 
    }

    #unity-canvas { 
        width: 100% !important; height: 100% !important; 
    }

    #loading-cover {
        position: absolute;
        inset: 0;
        z-index: 1000;
    }

    /* ===== BILLYGOAT WATERMARK BUTTON ===== */
    #brand-watermark {
        position: fixed;
        bottom: 20px;
        left: 20px;
        padding: 8px 14px;
        font-size: 14px;
        font-weight: 600;
        border-radius: 12px;
        background: rgba(0, 123, 255, 0.15);
        border: 1px solid rgba(0, 123, 255, 0.4);
        color: #4da6ff;
        backdrop-filter: blur(8px);
        z-index: 99999;
        font-family: Arial, sans-serif;
        cursor: pointer;
        user-select: none;
    }

    #brand-watermark:hover {
        background: rgba(0, 123, 255, 0.25);
    }
</style>
</head>

<body class="dark">

<div id="unity-container" class="unity-desktop">
    <canvas id="unity-canvas" tabindex="-1"></canvas>
</div>

<div id="loading-cover"></div>

<!-- CLICKABLE WATERMARK -->
<div id="brand-watermark" onclick="openBrand()">
    BillyGoat Games™
</div>

<script>
    // --- CORE VARIABLES (UNCHANGED) ---
    const NO_DATA = 'no data';

    var environmentData = NO_DATA;
    var cloudSaves = NO_DATA;
    var playerData = NO_DATA;
    var paymentsData = NO_DATA;
    var statsSaves = NO_DATA;

    var player = null;
    var payments = null;
    var initGame = false;
    var ygGameInstance = null;
    var ysdk = null;
    var isPausedGame = false;

    // --- LOG FIX ---
    function LogStyledMessage(message, style) {
        console.log(message);
    }

    function InitGame() {
        initGame = true;
        setTimeout(function() {
            if (ygGameInstance) {
                ygGameInstance.SendMessage('YG2Instance', 'InitSDKComplete');
            }
        }, 500);
    }

    // FORCE ENGLISH ENV
    var fakeEnvData = {
        language: "en",
        deviceType: "desktop",
        isMobile: false,
        isDesktop: true,
        isTablet: false,
        isTV: false
    };
    environmentData = JSON.stringify(fakeEnvData);

    // --- UNITY CONFIG ---
    const buildUrl = "https://cdn.jsdelivr.net/gh/z799gs/550o8@main/Build";
    const loaderUrl = buildUrl + "/Dune.loader.js";

    const config = {
        dataUrl: buildUrl + "/Dune.data.br",
        frameworkUrl: buildUrl + "/Dune.framework.js",
        streamingAssetsUrl: "StreamingAssets",
        companyName: "DefaultCompany",
        productName: "CloneDuneDEV",
        productVersion: "1.0"
    };

    const container = document.querySelector("#unity-container");
    const canvas = document.querySelector("#unity-canvas");
    const loadingCover = document.querySelector("#loading-cover");

    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
        container.className = "unity-mobile";
    }

    const script = document.createElement("script");
    script.src = loaderUrl;

    script.onload = () => {
        createUnityInstance(canvas, config, (progress) => {
        }).then((unityInstance) => {
            ygGameInstance = unityInstance;
            loadingCover.style.display = "none";

            InitFakeYSDK();
        }).catch((message) => {
            console.error(message);
        });
    };

    document.body.appendChild(script);

    // --- FAKE SDK ---
    function YG2Instance(method, arg) {
        if (!ygGameInstance) return;
        ygGameInstance.SendMessage('YG2Instance', method, arg);
    }

    function InitFakeYSDK() {
        RequestingEnvironmentData();
        InitPlayer();
        LoadCloud();
    }

    function RequestingEnvironmentData() {
        YG2Instance('SetEnvirData', environmentData);
    }

    function InitPlayer() {
        var fakePlayer = {
            playerAuth: "resolved",
            playerName: "Player",
            playerId: "local"
        };
        playerData = JSON.stringify(fakePlayer);
        YG2Instance('SetAuth', playerData);
    }

    function LoadCloud() {
        YG2Instance('SetLoadSaves', NO_DATA);
    }

    // --- ADS REMOVED COMPLETELY (INTENTIONALLY EMPTY) ---
    function InterAdvShow() {}
    function RewardedAdvShow() {}

    function FocusGame() {
        window.focus();
        canvas.focus();
    }

    window.addEventListener('pointerdown', FocusGame);

    // --- WATERMARK BUTTON ACTION ---
    function openBrand() {
        window.open("https://sites.google.com/view/billygoatgamesorg/home", "_blank");
    }

</script>

</body>
</html>

]]></Content>
</Module>
